@@ -1,11 +1,14 @@
 plugins {
-  id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+  id 'org.jetbrains.kotlin.jvm' version '1.3.70'
   id 'application'
-  id 'com.github.johnrengelman.shadow' version '5.0.0'
+  id 'java'
+  id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
 group = 'hoper.xyz'
 version = '1.0.0-SNAPSHOT'
+java.sourceCompatibility = JavaVersion.VERSION_11
+java.targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
   mavenCentral()
@@ -13,8 +16,8 @@ repositories {
 }
 
 ext {
-  kotlinVersion = '1.3.61'
-  vertxVersion = '3.8.5'
+  kotlinVersion = '1.3.70'
+  vertxVersion = '3.9.0'
   junitJupiterEngineVersion = '5.4.0'
 }
 
@@ -28,6 +31,9 @@ def watchForChange = 'src/**/*'
 def doOnChange = './gradlew classes'
 
 dependencies {
+  implementation "org.apache.commons:commons-lang3:3.8.1"
+  implementation "org.objenesis:objenesis:3.0.1"
+  compileOnly    "io.netty:netty-all:[5.0.0.Alpha2,)"
   implementation "io.vertx:vertx-auth-jwt:$vertxVersion"
   implementation "io.vertx:vertx-web:$vertxVersion"
   implementation "io.vertx:vertx-grpc:$vertxVersion"
@@ -58,6 +64,13 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.3.61"
 }
 
+compileJava {
+  options.encoding = "utf-8"
+  sourceCompatibility = JavaVersion.VERSION_11
+  targetCompatibility = JavaVersion.VERSION_1_8
+  options.compilerArgs << "--add-opens=java.base/jdk.internal.misc=jvm" << "--add-exports=java.base/jdk.internal.misc=jvm"
+}
+
 compileKotlin {
   kotlinOptions.jvmTarget = '1.8'
 }
@@ -68,7 +81,6 @@ compileTestKotlin {
 
 
 shadowJar {
-  classifier = 'fat'
   manifest {
     attributes 'Main-Verticle': mainVerticleName
   }
